--- a/index.html
+++ b/index.html
@@ -4,102 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ship Route Finder</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 600px;
-            margin: auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            text-align: center;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .result {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Ship Route Finder</h1>
-        <label for="start_lat">Start Latitude:</label>
-        <input type="number" id="start_lat" placeholder="Enter start latitude">
-        <label for="start_lon">Start Longitude:</label>
-        <input type="number" id="start_lon" placeholder="Enter start longitude">
-        <label for="goal_lat">Goal Latitude:</label>
-        <input type="number" id="goal_lat" placeholder="Enter goal latitude">
-        <label for="goal_lon">Goal Longitude:</label>
-        <input type="number" id="goal_lon" placeholder="Enter goal longitude">
-        <button onclick="findRoute()">Find Route</button>
-        <div class="result" id="result"></div>
+        <form id="route-form">
+            <label for="start_lat">Start Latitude:</label>
+            <input type="number" id="start_lat" placeholder="Enter start latitude" required>
+            <label for="start_lon">Start Longitude:</label>
+            <input type="number" id="start_lon" placeholder="Enter start longitude" required>
+            <label for="goal_lat">Goal Latitude:</label>
+            <input type="number" id="goal_lat" placeholder="Enter goal latitude" required>
+            <label for="goal_lon">Goal Longitude:</label>
+            <input type="number" id="goal_lon" placeholder="Enter goal longitude" required>
+            <button type="submit">Find Route</button>
+        </form>
+        <div id="result" class="result"></div>
+        <div id="map" class="map"></div>
     </div>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="main.js"></script>
 </body>
-  <script>
-        function findRoute() {
-            const startLat = parseFloat(document.getElementById('start_lat').value);
-            const startLon = parseFloat(document.getElementById('start_lon').value);
-            const goalLat = parseFloat(document.getElementById('goal_lat').value);
-            const goalLon = parseFloat(document.getElementById('goal_lon').value);
-
-            const data = {
-                start: [startLat, startLon],
-                goal: [goalLat, goalLon]
-            };
-
-            fetch('/find_route', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.status === 'success') {
-                    document.getElementById('result').innerHTML = `
-                        <h2>Route Found</h2>
-                        <p>Initial Route: ${data.initial_route}</p>
-                        <p>Final Route: ${data.final_route}</p>
-                        <img src="data:image/png;base64,${data.plot}" alt="Route Plot">
-                    `;
-                } else {
-                    document.getElementById('result').innerHTML = `<p>${data.message}</p>`;
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        }
-    </script>
 </html>
