--- a/index.html
+++ b/index.html
@@ -126,5 +126,6 @@
 
         Element('calculateButton').element.onclick = on_button_click
     </py-script>
+    <script src="main.js"></script>
 </body>
 </html>
